Фикс багов в тестах